# python-example

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.scraping  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6975d24e0e1f_create_user.py
shell-scripts/: entrypoint.sh
src/app/: main.py
src/app/dependencies/: user_dependencies.py
src/app/dtos/: observability_dtos.py  user_dtos.py
src/app/models/: base.py  user_model.py
src/app/repositories/: user_repository.py
src/app/routers/: user_router.py
src/app/services/: user_service.py
src/app/services/scraping/: base.py  scraping_service.py  site_a.py  site_b.py
src/infra/: config.py  db.py
src/infra/logger/: logger_config.json  logger_level.py  logger_manager.py
src/tasks/: scraping_cron.py
tests/: tests_user_service.py
tests/app/: tests_sum.py
tests/unit/: test_user_service.py
