[project]
name = "python-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
start = "app.main:main"

[tool.uv]
package = true

[tool.mypy]
strict = true
files = ["src/"]
exclude = '(^|/)tests(/|$)'

[dependency-groups]
dev = ["black>=25.9.0", "isort>=6.1.0", "mypy>=1.18.2", "ruff>=0.13.3"]
