[project]
name = "python-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
]

[tool.uv]
package = true

[tool.mypy]
plugins = ['pydantic.mypy']
mypy_path = "src"
strict = true
files = ["src/"]
exclude = '(^|/)tests(/|$)'
ignore_missing_imports = true

[dependency-groups]
dev = ["black>=25.9.0", "isort>=6.1.0", "mypy>=1.18.2", "ruff>=0.13.3"]
